--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<!-- Open Graph (for Facebook, Messenger, Discord, etc.) -->
+<meta property="og:title" content="Your Website Title">
+<meta property="og:description" content="A short description of your website.">
+<meta property="og:image" content="https://yourusername.github.io/yourrepo/champion.jpg">
+<meta property="og:url" content="https://yourusername.github.io/yourrepo/">
+<meta property="og:type" content="website">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Your Website Title">
+<meta name="twitter:description" content="A short description of your website.">
+<meta name="twitter:image" content="https://yourusername.github.io/yourrepo/champion.jpg">
 <title>Boxchampy — Home</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -91,4 +101,5 @@
 
 
 </body>
+
 </html>
