--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <meta property="og:title" content="Your Website Title">
 <meta property="og:description" content="A short description of your website.">
 <meta property="og:image" content="https://yourusername.github.io/yourrepo/champion.jpg">
-<meta property="og:url" content="https://yourusername.github.io/yourrepo/">
+<meta property="og:url" content="https://garms-01.github.io/yourrepo/">
 <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Your Website Title">
 <meta name="twitter:description" content="A short description of your website.">
-<meta name="twitter:image" content="https://yourusername.github.io/yourrepo/champion.jpg">
+<meta name="twitter:image" content="https://garms-01.github.io/yourrepo/champion.jpg">
 <title>Boxchampy — Home</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -103,3 +103,4 @@
 </body>
 
 </html>
+
