--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<!-- Open Graph (for Facebook, Messenger, Discord, etc.) -->
-<meta property="og:title" content="Your Website Title">
-<meta property="og:description" content="A short description of your website.">
-<meta property="og:image" content="https://yourusername.github.io/yourrepo/champion.jpg">
-<meta property="og:url" content="https://garms-01.github.io/yourrepo/">
+<!-- Social Media Preview -->
+<meta property="og:title" content="Miranda G — Final Output">
+<meta property="og:description" content="My Intro to Web Final Output project hosted on GitHub Pages.">
+<meta property="og:image" content="https://garms-01.github.io/Miranda-G-IntroWeb---Final-Output/images/champion.jpg">
+<meta property="og:url" content="https://garms-01.github.io/Miranda-G-IntroWeb---Final-Output/">
 <meta property="og:type" content="website">
+
+<!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Your Website Title">
-<meta name="twitter:description" content="A short description of your website.">
-<meta name="twitter:image" content="https://garms-01.github.io/yourrepo/champion.jpg">
+<meta name="twitter:title" content="Miranda G — Final Output">
+<meta name="twitter:description" content="My Intro to Web Final Output project hosted on GitHub Pages.">
+<meta name="twitter:image" content="https://garms-01.github.io/Miranda-G-IntroWeb---Final-Output/images/champion.jpg">
+
 <title>Boxchampy — Home</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -103,4 +106,5 @@
 </body>
 
 </html>
+
 
